--- a/FitnessApp/appsettings.json
+++ b/FitnessApp/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "MyDbContext": "tcp:fitnessapp.database.windows.net;Persist Security Info=True;User ID=fitnessapp;Password=fitness123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FitnessAppContextTRY": "Server=(localdb)\\mssqllocaldb;Database=FitnessApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
