--- a/FitnessApp/appsettings.json
+++ b/FitnessApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MyDbContext": "tcp:fitnessapp.database.windows.net;Persist Security Info=True;User ID=fitnessapp;Password=fitness123!"
+    "DefaultConnection": "tcp:fitnessapp.database.windows.net;Persist Security Info=True;User ID=fitnessapp;Password=fitness123!"
   },
   "Logging": {
     "LogLevel": {
