--- a/FitnessApp/FitnessApp.csproj
+++ b/FitnessApp/FitnessApp.csproj
@@ -7,14 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Pages\TicketTypePage.razor.css" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Pages\TicketTypePage.razor.css" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
@@ -28,6 +20,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FitnessApiClient\FitnessApiClient.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
