--- a/FitnessApiClient/FitnessApiClient.csproj
+++ b/FitnessApiClient/FitnessApiClient.csproj
@@ -20,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Blazor.DropDowns" Version="21.2.3" />
   </ItemGroup>
 
 </Project>
